Update package name

--- a/config-generation-name-issue/Ballerina.toml
+++ b/config-generation-name-issue/Ballerina.toml
@@ -1,6 +1,6 @@
 [package]
-org = "binoyperies"
-name = "bal_task_with_config"
+org = "chalindu"
+name = "bal_hello_world"
 version = "0.1.0"
 distribution = "2201.8.0"
 
